--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "build": "tsc --build",
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "migrate": "drizzle-kit migrate",
-    "generate": "drizzle-kit generate"
+    "db:migrate": "drizzle-kit migrate",
+    "db:generate": "drizzle-kit generate",
+    "db:drop": "drizzle-kit drop"
   },
   "keywords": [],
   "author": "",
