--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.31.2",
     "express": "^4.19.2",
-    "mysql2": "^3.10.1"
+    "mysql2": "^3.10.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/uuid": "^10.0.0",
     "drizzle-kit": "^0.22.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.2"
